acalc user url weight

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "express": "~4.9.x",
+    "gridfs-stream": "^1.0.1",
     "mongoskin": "~1.4.4",
-    "twit" : "~1.1.20"
+    "twit": "~1.1.20"
   },
   "engines": {
     "node": "0.10.x"
