--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cheerio": "^0.18.0",
     "express": "~4.9.x",
     "gridfs-stream": "^1.0.1",
+    "htmlparser2": "^3.8.2",
     "mongoskin": "~1.4.4",
+    "request": "^2.53.0",
     "twit": "~1.1.20"
   },
   "engines": {
